# remotePS3Controller

./: CMakeLists.txt  README.md
picoCode/: CMakeLists.txt  README.MD
picoCode/device/: CMakeLists.txt  descriptors.h  spi_device.c  usb_descriptors.c
picoCode/host/: CMakeLists.txt  spi_host.c
serialCommunication/: package-lock.json  package.json  remote.js
website/: Index.html  gamepad.js
website/icons/PS4/: CButtonPS4.aseprite  DownDirectionalButtonPS4_1.aseprite  DownDirectionalButtonPS4_1_on.aseprite  DownDirectionalButtonPS4_2.aseprite  L1PS4.aseprite  L2PS4.aseprite  L3PS4.aseprite  LeftDirectionalButtonPS4_1.aseprite  LeftDirectionalButtonPS4_2.aseprite  OptionsPS4.aseprite  R1PS4.aseprite  R2PS4.aseprite  R3PS4.aseprite  RightDirectionalButtonPS4_1.aseprite  RightDirectionalButtonPS4_2.aseprite  SButtonPS4.aseprite  SharePS4.aseprite  TButtonPS4.aseprite  UpDirectionalButtonPS4_1.aseprite  UpDirectionalButtonPS4_2.aseprite  XButtonPS4.aseprite  controller.aseprite
